[package]
name = "midiplayer"
version = "0.1.0"
description = "Midi Player"
authors = ["Slobodan Dan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
rustysynth = "1.2.1"
tinyaudio = "0.1.2"
itertools = "0.11.0"

# [target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.4.1", features = ["native-activity"] }
log = "0.4"
android_logger = "0.13.3"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 33

[package.metadata.android]
assets = "assets/"